// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 30263,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 273404,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 434105,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 393938,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 111166,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 167377,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 145946,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 98894,
}
`;

exports[`TWAMM #updateLongTermOrder gas adding 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 46190,
}
`;

exports[`TWAMM #updateLongTermOrder gas no delta 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 32562,
}
`;

exports[`TWAMM #updateLongTermOrder gas subtracting 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 55090,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 109167,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=true 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 97984,
}
`;
